compiler/tests/success/x86-64/force_regalloc_conflict.jazz
export fn main(reg u64 a) -> reg u64 {
  #[force_regalloc_conflict=RAX, force_regalloc_conflict=RDX] reg u64 x;
  reg u64 r;
  x = 1;
  x += a;
  r = x;
  return r;
}
