compiler/tests/fail/arm-m4/sub_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #SUB(x, 0x0000caca);
    [x] = x;
}
